--- a/MerlionPortal/MerlionPortal-war/web/crms/viewservicepodetail.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/viewservicepodetail.xhtml
@@ -46,6 +46,8 @@
                         <p:menuitem value="Create Service PO" url="createservicepo.xhtml" />
                         <p:menuitem value="View All Orders" url="viewallservicepos.xhtml" />
                         <p:menuitem value="View All Invoices" url="viewallinvoices.xhtml" />
+                        <p:menuitem value="View All GRNS Orders" url="viewallgrnsorders.xhtml" />
+                        <p:menuitem value="View Warehouse Rental Invoice" url="warehouserentalinvoice.xhtml" />
                     </p:submenu>
                     <p:submenu label="Key Account Management" styleClass="display:block">
                         <p:menuitem value="View Order Statistics" url="vieworderstatistics.xhtml" />
