crm menu with breadcrumb

--- a/MerlionPortal/MerlionPortal-war/web/crms/viewwarehouserentalinvoicedetail.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/viewwarehouserentalinvoicedetail.xhtml
@@ -60,8 +60,8 @@
         <ui:define name="right">
             <p:breadCrumb>
                 <p:menuitem value="CRMS Home" url="crmsindex.xhtml" />
-                <p:menuitem value="View All Invoices" url="viewallinvoices.xhtml" />
-                <p:menuitem value="View Invoice Detail" url="viewinvoicedetail.xhtml" />
+                <p:menuitem value="View Warehouse Rental Invoice" url="warehouserentalinvoice.xhtml" />
+                <p:menuitem value="View Warehouse Rental Invoice Detail" url="viewwarehouserentalinvoicedetail.xhtml" />
             </p:breadCrumb>
             <h:form id="form">
                 <p:fieldset legend="Contact Information" style="margin-bottom:20px">
