--- a/MerlionPortal/MerlionPortal-war/web/crms/warehouserentalinvoice.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/warehouserentalinvoice.xhtml
@@ -60,7 +60,7 @@
         <ui:define name="right">
             <p:breadCrumb>
                 <p:menuitem value="CRMS Home" url="crmsindex.xhtml" />
-                <p:menuitem value="View All Warehouse Rental Invoices" url="viewallinvoices.xhtml" />
+                <p:menuitem value="View Warehouse Rental Invoice" url="warehouserentalinvoice.xhtml" />
             </p:breadCrumb>
             <h:form id="form">
                 <p:ajaxStatus style="width:16px;height:16px;">
