Changed Right - Manli

--- a/MerlionPortal/MerlionPortal-war/web/admin/viewroles.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/viewroles.xhtml
@@ -139,7 +139,7 @@
                                                     <p:inplace label="#{viewCompanyRoles.selectedRole.canGenerateServiceQuotationAndContract}" editor="true">
                                                         <p:selectBooleanButton value="#{viewCompanyRoles.selectedRole.canGenerateServiceQuotationAndContract}"  onLabel="true" offLabel="false" onIcon="ui-icon-check" offIcon="ui-icon-close" style="width:80px"/>
                                                     </p:inplace>
-                                                    <h:outputText value="Manage Transportation Asset" />
+                                                    <h:outputText value="Manage Transportation Location and Asset" />
                                                     <p:inplace label="#{viewCompanyRoles.selectedRole.canManageTransportationAsset}" editor="true">
                                                         <p:selectBooleanButton value="#{viewCompanyRoles.selectedRole.canManageTransportationAsset}"  onLabel="true" offLabel="false" onIcon="ui-icon-check" offIcon="ui-icon-close" style="width:80px"/>
                                                     </p:inplace>
@@ -147,13 +147,13 @@
                                                     <p:inplace label="#{viewCompanyRoles.selectedRole.canManageTransportationOrder}" editor="true">
                                                         <p:selectBooleanButton value="#{viewCompanyRoles.selectedRole.canManageTransportationOrder}"  onLabel="true" offLabel="false" onIcon="ui-icon-check" offIcon="ui-icon-close" style="width:80px"/>
                                                     </p:inplace>
-                                                    <h:outputText value="Manage Location" />
-                                                    <p:inplace label="#{viewCompanyRoles.selectedRole.canManageLocation}" editor="true">
-                                                        <p:selectBooleanButton value="#{viewCompanyRoles.selectedRole.canManageLocation}"  onLabel="true" offLabel="false" onIcon="ui-icon-check" offIcon="ui-icon-close" style="width:80px"/>
+                                                    <h:outputText value="Manage Transportation Log" />
+                                                    <p:inplace label="#{viewCompanyRoles.selectedRole.canManageLog}" editor="true">
+                                                        <p:selectBooleanButton value="#{viewCompanyRoles.selectedRole.canManageLog}"  onLabel="true" offLabel="false" onIcon="ui-icon-check" offIcon="ui-icon-close" style="width:80px"/>
                                                     </p:inplace>
-                                                    <h:outputText value="Manage Asset Type" />
-                                                    <p:inplace label="#{viewCompanyRoles.selectedRole.canManageAssetType}" editor="true">
-                                                        <p:selectBooleanButton value="#{viewCompanyRoles.selectedRole.canManageAssetType}"  onLabel="true" offLabel="false" onIcon="ui-icon-check" offIcon="ui-icon-close" style="width:80px"/>
+                                                    <h:outputText value="Manage Asset Maintenance" />
+                                                    <p:inplace label="#{viewCompanyRoles.selectedRole.canManageAssetMaintenence}" editor="true">
+                                                        <p:selectBooleanButton value="#{viewCompanyRoles.selectedRole.canManageAssetMaintenence}"  onLabel="true" offLabel="false" onIcon="ui-icon-check" offIcon="ui-icon-close" style="width:80px"/>
                                                     </p:inplace>
                                                     <h:outputText value="Use HR Function" />
                                                     <p:inplace label="#{viewCompanyRoles.selectedRole.canUseHRFunction}" editor="true">
