--- a/MerlionPortal/MerlionPortal-war/web/admin/createrole.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/createrole.xhtml
@@ -15,6 +15,18 @@
             <h:form id="form" >
                 <div class="container">
                     <h2>Create Role</h2>
+                    <c:if test ="#{dashboardBean.loginedUser.userType == 'superuser'}">
+                        <p:panel header="Select Company" style="margin-bottom:10px;">
+                            <h:panelGrid columns="2" cellpadding="5">
+                                <p:outputLabel for="company" value="Company" />
+                                <h:selectOneMenu id="company" value="#{createRole.selectCompanyId}"  style="width:250px" styleClass="form-control" required="true" requiredMessage="Please select a company">
+                                    <p:ajax listener="#{createRole.checkCompanyPackage}" update="subsystem"  />
+                                    <f:selectItem itemLabel="Select Company . . ." itemValue="" noSelectionOption="true" />
+                                    <f:selectItems value="#{createRole.companys}" var="company" itemLabel="#{company.name}"  itemValue="#{company.companyId}"/>
+                                </h:selectOneMenu>
+                            </h:panelGrid>
+                        </p:panel>
+                    </c:if>
                     <div class="row spacing">
                         <div class="col-md-5">
                             <div class="input-group">
@@ -36,18 +48,7 @@
                             </div>
                         </div>
                     </div>
-                    <c:if test ="#{dashboardBean.loginedUser.userType == 'superuser'}">
-                        <p:panel header="Select Company" style="margin-bottom:10px;">
-                            <h:panelGrid columns="2" cellpadding="5">
-                                <p:outputLabel for="company" value="Company" />
-                                <h:selectOneMenu id="company" value="#{createRole.selectCompanyId}"  style="width:250px" styleClass="form-control" required="true" requiredMessage="Please select a company">
-                                    <p:ajax listener="#{createRole.checkCompanyPackage}" update="subsystem"  />
-                                    <f:selectItem itemLabel="Select Company . . ." itemValue="" noSelectionOption="true" />
-                                    <f:selectItems value="#{createRole.companys}" var="company" itemLabel="#{company.name}"  itemValue="#{company.companyId}"/>
-                                </h:selectOneMenu>
-                            </h:panelGrid>
-                        </p:panel>
-                    </c:if>
+
                     <h:panelGroup id="subsystem" >
                         <div class="row spacing">
                             <div class="col-md-10">
@@ -133,10 +134,10 @@
                                         Transport Management System <span class="caret"></span>
                                     </button>
                                     <ul class="dropdown-menu rights-menu" role="menu">
-                                        <li><a id="tmsMTA" href="#" onclick="addRight(this);">Manage Transportation Asset</a></li>
+                                        <li><a id="tmsMTA" href="#" onclick="addRight(this);">Manage Transportation Location and Asset</a></li>
                                         <li><a id="tmsMTO" href="#" onclick="addRight(this);">Manage Transportation Order</a></li>
-                                        <li><a id="tmsML" href="#" onclick="addRight(this);">Manage Location</a></li>
-                                        <li><a id="tmsMAT" href="#" onclick="addRight(this);">Manage Asset Type</a></li>
+                                        <li><a id="tmsML" href="#" onclick="addRight(this);">Manage Transportation Log</a></li>
+                                        <li><a id="tmsMAT" href="#" onclick="addRight(this);">Manage Asset Maintenance</a></li>
                                         <li><a id="tmsUHF" href="#" onclick="addRight(this);">Use HR Function</a></li>
                                     </ul>
                                 </div>
@@ -162,22 +163,20 @@
                             </div>
                         </c:if>
 
-                        <c:if test="#{createRole.companyPackage == 3 || createRole.companyPackage == 4}">
-                            <div class="row spacing">
-                                <div class="col-md-10">
-                                    <!-- GRNS -->
-                                    <div class="btn-group btn-group-lg">
-                                        <button type="button" class="btn btn-success dropdown-toggle rights-btn" data-toggle="dropdown">
-                                            Global Rates Negotiation System <span class="caret"></span>
-                                        </button>
-                                        <ul class="dropdown-menu rights-menu" role="menu">
-                                            <li><a id="grnsMB" href="#" onclick="addRight(this);">Manage Bid</a></li>
-                                            <li><a id="grnsMP" href="#" onclick="addRight(this);">Manage Post</a></li>
-                                        </ul>
-                                    </div>
+                        <div class="row spacing">
+                            <div class="col-md-10">
+                                <!-- GRNS -->
+                                <div class="btn-group btn-group-lg">
+                                    <button type="button" class="btn btn-success dropdown-toggle rights-btn" data-toggle="dropdown">
+                                        Global Rates Negotiation System <span class="caret"></span>
+                                    </button>
+                                    <ul class="dropdown-menu rights-menu" role="menu">
+                                        <li><a id="grnsMB" href="#" onclick="addRight(this);">Manage Bid</a></li>
+                                        <li><a id="grnsMP" href="#" onclick="addRight(this);">Manage Post</a></li>
+                                    </ul>
                                 </div>
                             </div>
-                        </c:if>
+                        </div>
 
                     </h:panelGroup>
                     <div class="row spacing">
