--- a/MerlionPortal/MerlionPortal-war/web/tms/addnewlog.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/addnewlog.xhtml
@@ -110,10 +110,7 @@
                                 <h:outputLabel for="operator" style="font-weight: bold" value="OperatorID:  " />
                             </p:column>
                             <p:column>
-                                <p:selectOneMenu id="operator" value="#{tOLogManagerBean.operatorId}"  style="width:210px" required="true" requiredMessage="Please select a Operator">
-                                    <f:selectItem itemLabel="Select Operator" itemValue="" noSelectionOption="true" />
-                                    <f:selectItems value="#{tOLogManagerBean.operators}" var="operator" itemLabel="Operator ID:#{operator.operatorId} Name:#{operator.operatorName}"  itemValue="#{operator.operatorId}"/>
-                                </p:selectOneMenu>
+                                <h:outputText value="#{tOLogManagerBean.operatorId}" />
                             </p:column>
                         </p:row>
                         <p:row>
